# deeplearning.ai

./: .gitignore  README.md  Summary.md  pyproject.toml
ChatGPT_Prompt_Engineering_for_Developers/: ChatGPT_Prompt_Engineering_for_Developers.md  ChatGPT_Prompt_Engineering_summary.md
ChatGPT_Prompt_Engineering_for_Developers/notebooks/: l4-summarizing.ipynb
ChatGPT_Prompt_Engineering_for_Developers/notebooks tutorial/: l2-guidelines.ipynb  l3-iterative-prompt-development.ipynb  l5-inferring.ipynb  l6-transforming.ipynb
LangChain_Chat_with_your_data/: dynamic_prompt.ipynb  summary.md
LangChain_Chat_with_your_data/notebooks tutorial/: L1-Document_loading.ipynb  L2-Document_splitting.ipynb  L3-Vectorstores_and_Embeddings.ipynb  L4-Retrieval.ipynb  L5-Question_answering.ipynb
LangChain_Chat_with_your_data/notebooks tutorial/.chroma/index/: id_to_uuid_89f6a2c9-489a-4cf5-9638-677dbafb057b.pkl  id_to_uuid_92ae6286-fc8a-4709-9511-50cf6722ba25.pkl  id_to_uuid_be53c26e-7f4a-49fd-bc16-e6da73ba1681.pkl  index_metadata_89f6a2c9-489a-4cf5-9638-677dbafb057b.pkl  index_metadata_92ae6286-fc8a-4709-9511-50cf6722ba25.pkl  index_metadata_be53c26e-7f4a-49fd-bc16-e6da73ba1681.pkl  uuid_to_id_89f6a2c9-489a-4cf5-9638-677dbafb057b.pkl  uuid_to_id_92ae6286-fc8a-4709-9511-50cf6722ba25.pkl  uuid_to_id_be53c26e-7f4a-49fd-bc16-e6da73ba1681.pkl
LangChain_Chat_with_your_data/notebooks tutorial/docs/chroma/: chroma-collections.parquet  chroma-embeddings.parquet
LangChain_Chat_with_your_data/notebooks tutorial/docs/chroma/index/: id_to_uuid_6cb33cc9-45ff-40ef-a3dc-5ba4354de427.pkl  (+2 more)
