[tool.poetry]
name = "llm-tutorials"
version = "0.1.0"
description = ""
authors = ["Jan Ciepiela"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
pandas = "1.5.3"
openai = "^0.27.8"
python-dotenv = "^1.0.0"
langchain = "^0.0.222"
kor = "^0.11.0"
ipykernel = "^6.24.0"
jsonlines = "^3.1.0"
pypdf = "^3.13.0"
yt-dlp = "^2023.7.6"
pydub = "^0.25.1"
tiktoken = "^0.4.0"
chromadb = "^0.3.29"
lark = "^1.1.7"
scikit-learn = "^1.3.0"


[tool.poetry.group.dev.dependencies]
dvc = {extras = ["s3"], version = "^3.4.0"}
jupyterlab = "^4.0.2"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
